--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,17 @@
             <version>1.7.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.commons</groupId>
