--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </scm>
 
     <properties>
-        <spring.version>4.3.5.RELEASE</spring.version>
+        <spring.version>4.3.29.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <java.version>14</java.version>
@@ -39,6 +39,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fazecast</groupId>
+            <artifactId>jSerialComm</artifactId>
+            <version>2.6.2</version>
         </dependency>
 
         <dependency>
